--- a/mandelbulber2/qt/randomizer_dialog.ui
+++ b/mandelbulber2/qt/randomizer_dialog.ui
@@ -44,6 +44,13 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_stop">
+           <property name="text">
+            <string>STOP</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
        <item>
