--- a/mandelbulber2/formula/ui/testing_transform2.ui
+++ b/mandelbulber2/formula/ui/testing_transform2.ui
@@ -50,14 +50,14 @@
       <item>
        <widget class="MyCheckBox" name="checkBox_transf_function_enabledA_false">
         <property name="text">
-         <string notr="true">enable maximum</string>
+         <string notr="true">enable A</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="MyCheckBox" name="checkBox_transf_function_enabledJ_false">
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledC_false">
         <property name="text">
-         <string notr="true">test</string>
+         <string notr="true">testc sin</string>
         </property>
        </widget>
       </item>
@@ -137,6 +137,20 @@
          </widget>
         </item>
        </layout>
+      </item>
+      <item>
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledJ_false">
+        <property name="text">
+         <string notr="true">test j</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledM_false">
+        <property name="text">
+         <string notr="true">test m</string>
+        </property>
+       </widget>
       </item>
       <item>
        <layout class="QGridLayout" name="gridLayout_7" columnstretch="0,1">
@@ -1052,14 +1066,14 @@ offset:</string>
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>MyDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>my_double_spin_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MySpinBox</class>
    <extends>QSpinBox</extends>
    <header>my_spin_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MyDoubleSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>my_double_spin_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
