--- a/mandelbulber2/formula/ui/transf_rotation_iter_controls.ui
+++ b/mandelbulber2/formula/ui/transf_rotation_iter_controls.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_rotation_iter_controls</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>907</width>
-    <height>856</height>
+    <height>927</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -101,10 +101,10 @@
         <number>6</number>
        </property>
        <property name="minimum">
-        <double>-180.000000000000000</double>
+        <double>-36000.000000000000000</double>
        </property>
        <property name="maximum">
-        <double>180.000000000000000</double>
+        <double>36000.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>1.000000000000000</double>
@@ -129,10 +129,10 @@
         <number>6</number>
        </property>
        <property name="minimum">
-        <double>-180.000000000000000</double>
+        <double>-36000.000000000000000</double>
        </property>
        <property name="maximum">
-        <double>180.000000000000000</double>
+        <double>36000.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>1.000000000000000</double>
