Added Load/Save option for custom formulas

--- a/mandelbulber2/qt/custom_formula_editor.ui
+++ b/mandelbulber2/qt/custom_formula_editor.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>583</width>
+    <width>498</width>
     <height>932</height>
    </rect>
   </property>
@@ -46,16 +46,16 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_save">
+      <widget class="QPushButton" name="pushButton_load_from_file">
        <property name="text">
-        <string>Save</string>
+        <string>Load from file</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_save_as">
+      <widget class="QPushButton" name="pushButton_save_to_file">
        <property name="text">
-        <string>Save As</string>
+        <string>Save to file</string>
        </property>
       </widget>
      </item>
